--- a/server/public/index.html
+++ b/server/public/index.html
@@ -42,7 +42,7 @@
 
     #art {
       border-radius: 20px;
-      box-shadow: 0 20px 30px rgba(0, 0, 0, 0.7);
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.7);
       height: auto;
       max-width: 600px;
       position: absolute;
