--- a/server/public/index.html
+++ b/server/public/index.html
@@ -59,7 +59,7 @@
     let last = null;
 
     const update = () => {
-      fetch('/select/{username}')
+      fetch('/select')
         .then(res => res.json())
         .then(data => {
           if (last === data.music) {
